fix(style): make vertical align less opinionated

--- a/packages/veui-theme-dls/components/autocomplete.less
+++ b/packages/veui-theme-dls/components/autocomplete.less
@@ -3,7 +3,6 @@
 
 .@{veui-prefix}-autocomplete {
   display: inline-flex;
-  vertical-align: middle;
   border-radius: @dls-input-border-radius-m;
 
   &[ui~="s"] {
