--- a/packages/veui-theme-dls/components/button-group.less
+++ b/packages/veui-theme-dls/components/button-group.less
@@ -2,7 +2,6 @@
 
 .@{veui-prefix}-button-group {
   display: inline-flex;
-  vertical-align: middle;
 
   .@{veui-prefix}-button {
     position: relative;
