--- a/packages/veui-theme-dls/components/input-group.less
+++ b/packages/veui-theme-dls/components/input-group.less
@@ -3,7 +3,6 @@
 .@{veui-prefix}-input-group {
   display: inline-flex;
   align-items: stretch;
-  vertical-align: middle;
 
   .@{veui-prefix}-span,
   .@{veui-prefix}-label {
