--- a/packages/veui-theme-dls/components/input.less
+++ b/packages/veui-theme-dls/components/input.less
@@ -13,7 +13,6 @@
   color: @dls-input-font-color;
   border-radius: @dls-input-border-radius-m;
   font-size: @dls-input-font-size-m;
-  vertical-align: middle;
   line-height: normal;
   cursor: text;
   .veui-transition(border-color, color, box-shadow);
