--- a/packages/veui-theme-dls/components/loading.less
+++ b/packages/veui-theme-dls/components/loading.less
@@ -4,7 +4,6 @@
   line-height: 1;
   align-items: center;
   display: inline-flex;
-  vertical-align: middle;
   font-size: @dls-loading-font-size-m;
 
   &[ui~="s"] {
