--- a/packages/veui-theme-dls/components/search-box.less
+++ b/packages/veui-theme-dls/components/search-box.less
@@ -3,7 +3,6 @@
 
 .@{veui-prefix}-search-box {
   display: inline-flex;
-  vertical-align: middle;
   width: @dls-input-width;
   color: @dls-input-font-color;
   background-color: @dls-input-background-color;
