--- a/packages/veui-theme-dls/components/switch.less
+++ b/packages/veui-theme-dls/components/switch.less
@@ -48,7 +48,6 @@
 
   display: inline-flex;
   align-items: center;
-  vertical-align: middle;
   position: relative;
   cursor: pointer;
   outline: none;
